force-app/main/default/objects/Case_Coupon__c/Case_Coupon__c.object-meta.xml
<CustomObject>
    <label>Case Voucher</label>
    <nameField>
        <displayFormat>CCID-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Vouchers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>