force-app/main/default/objects/Case_Coupon__c/fields/Coupon_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Expiry_Date__c</fullName>
    <formula>Coupon_ID__r.Coupon_Expired_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Expiry Date</label>
    <type>Date</type>
</CustomField>