force-app/main/default/objects/Case_Coupon__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <label>Voucher Number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Coupon__c.Coupon_Status__c</field>
            <operation>equals</operation>
            <value>Distributed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Case Vouchers</relationshipLabel>
    <relationshipName>Case_Coupons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>