force-app/main/default/objects/Case_Coupon__c/fields/Coupon_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Issue_Date__c</fullName>
    <label>Voucher Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>