force-app/main/default/objects/Case_Coupon__c/fields/Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Number__c</fullName>
    <description>corresponding Coupon ID</description>
    <label>Voucher Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>