force-app/main/default/objects/Case_Coupon__c/fields/Coupon_Status__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Status__c</fullName>
    <formula>TEXT(Coupon_ID__r.Coupon_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Status</label>
    <type>Text</type>
</CustomField>