force-app/main/default/objects/Case_Coupon__c/fields/Coupon_Value__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Value__c</fullName>
    <formula>Coupon_ID__r.Coupon_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voucher Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>