force-app/main/default/objects/Case_Coupon__c/fields/Frontline_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Frontline_Authorization_Code__c</fullName>
    <label>Frontline Authorization Code (ex:A01B1S)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>