force-app/main/default/objects/Case_Coupon__c/fields/Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Issue_Reason__c</fullName>
    <label>Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meal Quality</fullName>
                <default>true</default>
                <label>Meal Quality</label>
            </value>
            <value>
                <fullName>Irregular Meal Handling</fullName>
            </value>
            <value>
                <fullName>Cabin Facilities/Equipment Issues</fullName>
            </value>
            <value>
                <fullName>Flight Irregularities</fullName>
            </value>
            <value>
                <fullName>INVL Downgrade/Overbooking</fullName>
            </value>
            <value>
                <fullName>Passenger Injury</fullName>
            </value>
            <value>
                <fullName>Spilling Issues</fullName>
            </value>
            <value>
                <fullName>Mishandled Baggage</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>