force-app/main/default/objects/Case_Coupon__c/validationRules/Crew_Case_Coupon_Issued_Date_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Crew_Case_Coupon_Issued_Date_Limit</fullName>
    <active>true</active>
    <description>Crew Case Coupon Date Could Not Be Greater Than Today</description>
    <errorConditionFormula>CONTAINS(TEXT(Coupon_ID__r.Distribution_Department__c), &apos;CCD&apos;) &amp;&amp;
(Case_ID__r.Flight_Date__c&lt;Coupon_ID__r.Coupon_Created_Date__c ||
Case_ID__r.Flight_Date__c&lt;Coupon_ID__r.Coupon_Distributed_to_Agent_Date__c ||
Case_ID__r.Flight_Date__c&gt;TODAY())</errorConditionFormula>
    <errorDisplayField>Coupon_Issue_Date__c</errorDisplayField>
    <errorMessage>Crew Case Coupon Flight Date Could Not Be Later Than Today And Could Not Be Prior To Distributed To Agent Date</errorMessage>
</ValidationRule>